[gd_scene load_steps=2 format=3 uid="uid://c2i8q5ocldky0"]

[ext_resource type="Script" uid="uid://dvs5v00feyrmy" path="res://Acoes.gd" id="1_16xs8"]

[node name="Ações" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_16xs8")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(180, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = -58.5
offset_right = 41.0
offset_bottom = 58.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="B_Attack" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Attack"

[node name="B_Defense" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Defense"

[node name="B_Run" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Run"

[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/B_Attack" to="." method="_on_b_attack_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/B_Defense" to="." method="_on_b_defense_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/VBoxContainer/B_Run" to="." method="_on_b_run_button_down"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/B_Run" to="." method="_on_b_run_pressed"]
